Solve overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,10 @@ ul {
     padding: 0;
 }
 
+.site{
+    overflow: hidden;
+}
+
 /*--------------------------------------------------------------
 >>> Global Settings
 ---------------------------------------------------------------*/
